--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -36,7 +36,16 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
+    
+    # clone the repo
+    - name: Clone Repo
+      run: git clone https://github.com/doyinjokomba/infra-for-sockshop
+    
+    # open infra folder
+    - name: Open Repo folder
+      run: cd infra-for-sockshop
+      
+      
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
